# anime-girls-and-computers

./: Cargo.toml  README.md  agc-parser  example.toml
.github/workflows/: build-parser.yml  parse-images.yml  parse.yml
hardware/: takina_holding_asus_motherboard.toml
hardware/asus/: takina_holding_asus_motherboard.toml
linux/: chisato_nishikigi_mint.toml  chisato_nishikigi_tux.toml  lain_gentoo.toml  mashiiro_shiina_fedora.toml  mashiro_shiina_fedora.toml  misaki_takasaki_alpine_linux.toml  nanami_aoyama_arch.toml  nanami_aoyama_arch_gradient.toml  rikka_arch.toml  ubuntu_girl.toml  ubuntu_girl_text.toml
linux/alpine/: hanabi_yasuraoka_alpine.toml
linux/arch/: nanami_aoyama_arch.toml  rikka_arch.toml  rikka_inside_arch.toml  satone_inside_arch.toml  tsubasa_katsuki_arch.toml
linux/bazzite/: yuri_ddlc_bazzite.toml  yuri_doki_bazzite.toml
linux/fedora/: konata_kagami_fedora.toml  mashiro_shiina_fedora.toml  miyako_shikimori_fedora.toml
linux/freebsd/: ruki_irokawa_freebsd.toml
linux/gentoo/: lain_gentoo.toml  nagisa_gentoo.toml
linux/mint/: chisato_nishikigi_mint.toml
linux/nix/: kaoruko_moeta_nix.toml
linux/rocky/: koyume_koizuka_rocky.toml
linux/ubuntu/: sanae_dekomori_ubuntu.toml
linux/wayland/: kouko_wayland.toml
src/: main.rs
src/agc-parser/src/: main.rs
