[package]
name = "agc-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
regex = "1.10.5"
colored = "2.1.0"
image = "0.25.2"
toml = "0.8.15"
serde = { version = "1.0", features = ["derive"] }